# template-python

./: makefile  pyproject.toml  vinc.json
placeholder/: __init__.py  __main__.py
