[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "placeholder"
version = "0.0.0" # version
authors = [
    { name = "Guenthner", email = "guenthner.jonathan@gmail.com" },
]
description = "Placeholder description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["colorama"]
keywords = []

[project.scripts]
placeholder = "placeholder:command_entry_point"