[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "LICENSE.txt",
    "pyproject.toml",
    "placeholder" # TODO
]

[project]
name = "placeholder" # TODO
version = "0.0.0" # version
authors = [
    { name = "Guenthner", email = "guenthner.jonathan@gmail.com" },
]
description = "Placeholder description" # TODO
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["colorama", "mydefaults==1.*.*"]
keywords = []

[project.scripts]
placeholder = "placeholder:command_entry_point" # TODO